--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,21 +11,37 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 a {
   font-weight: 500;
   color: #646cff;
-  text-decoration: inherit;
+  
 }
 a:hover {
   color: #535bf2;
 }
 
+
+.nav-link:hover {
+  text-decoration: underline;
+}
+
+
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
+  background-color: #ffffff; /* Ganti background halaman */
   min-width: 320px;
   min-height: 100vh;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333;
+}
+
+h1, h2, h3, h4, h5, h6,
+.fw-bold, .font-heading {
+  font-family: 'Poppins', sans-serif;
 }
 
 h1 {
@@ -41,7 +55,7 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
+  font-family: 'Open Sans', sans-serif;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
@@ -65,4 +79,15 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+
+  .chat-input::placeholder {
+    color: #000000; /* warna hitam */
+    opacity: 1;     /* biar nggak transparan */
+  }
+  
+  .bg-chatbot {
+    background-color: #88A788 !important;
+  }
+  
+  
 }
